[gd_scene load_steps=25 format=3 uid="uid://ccmqn7b2pqmml"]

[ext_resource type="Script" path="res://script/UI/main_menu.gd" id="1_6svuo"]
[ext_resource type="Texture2D" uid="uid://cey287ip07kv0" path="res://scene/UI/bg_menu.png" id="2_0wb21"]
[ext_resource type="Shader" path="res://scene/UI/main_menu.gdshader" id="2_2lpbo"]
[ext_resource type="Texture2D" uid="uid://xi123j6g3gao" path="res://scene/UI/button_normal.png" id="4_dkdpp"]
[ext_resource type="Texture2D" uid="uid://bigq5c7r4w6rb" path="res://scene/UI/button_hover.png" id="5_dc2h3"]
[ext_resource type="Texture2D" uid="uid://dkqiui8e3ct68" path="res://scene/UI/button_click.png" id="6_6uvf1"]
[ext_resource type="Theme" uid="uid://rra5yvnwjanv" path="res://ui/themes_main.tres" id="7_ygycs"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3qski"]
shader = ExtResource("2_2lpbo")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_762tj"]
texture = ExtResource("4_dkdpp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o43cu"]
texture = ExtResource("5_dc2h3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mfgey"]
texture = ExtResource("6_6uvf1")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jlk4l"]
texture = ExtResource("5_dc2h3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q1jnf"]
texture = ExtResource("4_dkdpp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_71iwd"]
texture = ExtResource("5_dc2h3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4fyl1"]
texture = ExtResource("6_6uvf1")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6g343"]
texture = ExtResource("5_dc2h3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a0oy8"]
texture = ExtResource("4_dkdpp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cgkw3"]
texture = ExtResource("5_dc2h3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3k6en"]
texture = ExtResource("6_6uvf1")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nxbqc"]
texture = ExtResource("5_dc2h3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t3xpi"]
texture = ExtResource("4_dkdpp")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rn3on"]
texture = ExtResource("5_dc2h3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8b4wr"]
texture = ExtResource("6_6uvf1")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4bmw8"]
texture = ExtResource("5_dc2h3")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6svuo")

[node name="bg_menu" type="Sprite2D" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_3qski")
position = Vector2(299, 352)
texture = ExtResource("2_0wb21")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.5
offset_top = -68.0
offset_right = 62.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
theme = ExtResource("7_ygycs")
theme_override_styles/normal = SubResource("StyleBoxTexture_762tj")
theme_override_styles/hover = SubResource("StyleBoxTexture_o43cu")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mfgey")
theme_override_styles/focus = SubResource("StyleBoxTexture_jlk4l")
text = "Start"

[node name="SpaceInvadersButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("7_ygycs")
theme_override_styles/normal = SubResource("StyleBoxTexture_q1jnf")
theme_override_styles/hover = SubResource("StyleBoxTexture_71iwd")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4fyl1")
theme_override_styles/focus = SubResource("StyleBoxTexture_6g343")
text = "Space Invaders"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("7_ygycs")
theme_override_styles/normal = SubResource("StyleBoxTexture_a0oy8")
theme_override_styles/hover = SubResource("StyleBoxTexture_cgkw3")
theme_override_styles/pressed = SubResource("StyleBoxTexture_3k6en")
theme_override_styles/focus = SubResource("StyleBoxTexture_nxbqc")
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartButton")
theme = ExtResource("7_ygycs")
theme_override_styles/normal = SubResource("StyleBoxTexture_t3xpi")
theme_override_styles/hover = SubResource("StyleBoxTexture_rn3on")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8b4wr")
theme_override_styles/focus = SubResource("StyleBoxTexture_4bmw8")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SpaceInvadersButton" to="." method="_on_space_invaders_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
